[package]
name = "soroban-event-indexer"
version = "0.1.0"
edition = "2021"
authors = ["Churchill Osei <cokehill>"]
description = "Embeddable Rust library for indexing Soroban smart contract events. Watch any contract, decode ScVal topics/values, persist to SQLite."
license = "MIT"
repository = "https://github.com/cokehill/soroban-event-indexer"
keywords = ["stellar", "soroban", "indexer", "events", "blockchain"]
readme = "README.md"

[lib]
name = "soroban_event_indexer"
path = "src/lib.rs"

[[bin]]
name = "soroban-indexer"
path = "src/bin/main.rs"

[[example]]
name = "watch_escrow"
path = "examples/watch_escrow.rs"

[[example]]
name = "with_sqlite"
path = "examples/with_sqlite.rs"

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]
cli = ["dep:clap"]

[dependencies]
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

# Optional: SQLite persistence
rusqlite = { version = "0.29", features = ["bundled"], optional = true }

# Optional: CLI
clap = { version = "4", features = ["derive"], optional = true }
